# Morshed-backend

./: LICENSE  README.md  pyproject.toml
apps/: STD.csv  course_recommendation_model.py  my_apps.py  schedule_recommendation_model.py  web_development_courses.csv
apps/course/: admin.py  constant.py  models.py  schema.py
apps/course/fixture/: external_course.json
apps/course/migrations/: 0001_initial.py  0002_courses_course_number.py  0003_alter_courses_course_level.py  0004_remove_courses_course_grade_courses_course_image_and_more.py  0005_remove_studentcourse_course_grade_and_more.py  0006_courses_course_image_detail.py  0007_alter_courses_course_level_and_more.py  0008_alter_courses_number_of_hours.py
apps/course_recommendation/: apps.py
apps/main/: models.py
apps/schedule_recommendation/: apps.py
apps/user_auth/: admin.py  apps.py  authentication.py  manager.py  models.py  mutations.py  schema.py
apps/user_auth/migrations/: 0001_initial.py  0002_morshedstudent_passed_hours_and_more.py
configs/: schema.py  settings.py  urls.py
graphql_auth/: bases.py
graphql_auth/migrations/: 0001_initial.py
